[package]
name = "dlk-objviewer"
version = "0.1.0"
edition = "2024"
authors = ["Devin Kern"]
license = "Apache-2.0"
description = "A program that displays Wavefront .obj files."
homepage = "https://github.com/DevinLKern/dlk-gamedev"
repository = "https://github.com/DevinLKern/dlk-gamedev"
# readme = ""
# documentation = ""

[dependencies]
winit = "0.30.12"
ash = "0.38.0"
vulkan = { path = "../vulkan" }
renderer = { path = "../renderer" }
math = { path = "../math" }
image = "=0.25.9"
wavefront_obj = "11.0.0"
tracing = { version = "0.1.44", features = ["max_level_trace", "release_max_level_warn"] }
tracing-subscriber = "0.3.22"
tracing-appender = "0.2.4"
